--- a/index.html
+++ b/index.html
@@ -11,7 +11,26 @@
   <div class="container">
     <div class="header"></div>
     <div class="sidebar"></div>
-    <div class="main-content"></div>
+    <div class="main-content">
+      <div class="projects">
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+      </div>
+      <div class="right-info">
+        <div class="announcements"></div>
+        <div class="trending"></div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
