Add and position subsection elems

--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
 </head>
 <body>
   <div class="container">
-    <div class="header"></div>
+    <div class="header">
+        <div class="header-top-half">
+          <div class="header-top-left">
+            <label for="search">~icon~</label>
+            <input type="text" id="search" name="search">
+          </div>
+          <div class="header-top-right">
+            <span>~icon~</span>
+            <div class="replace-with-real-image">img</div>
+            <span>John Doe</span>
+          </div>
+        </div>
+        <div class="header-bottom-half">
+          <div class="header-bottom-left">
+            <div class="replace-with-real-image"></div>
+            <div>
+              <p>Hi there,</p>
+            </div>
+            <div>
+              <p>John Doe</p>
+            </div>
+          </div>
+          <div class="header-bottom-right">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
+        </div>
+    </div>
     <div class="sidebar">
       <h1>Dashboard</h1>
       <ul>
@@ -27,6 +55,8 @@
       </ul>
     </div>
     <div class="main-content">
+      <h2>Your Projects</h2>
+      <h2 class="announcements-header">Announcements</h2>
       <div class="projects">
         <div class="project"></div>
         <div class="project"></div>
@@ -43,7 +73,11 @@
       </div>
       <div class="right-info">
         <div class="announcements"></div>
-        <div class="trending"></div>
+        <div class="trending-header">
+          <h2>Trending</h2>
+        </div>
+        <div class="trending">
+        </div>
       </div>
     </div>
   </div>
