Populate Announcements and Trending

--- a/index.html
+++ b/index.html
@@ -72,11 +72,44 @@
         <div class="project"></div>
       </div>
       <div class="right-info">
-        <div class="announcements"></div>
+        <div class="announcements">
+          <div class="announcement">
+            <h4>Site Maintenance</h4>
+            <p>Accusamus nihil dicta, quisquam, similique doloremque unde quidem quaerat a possimus eum deleniti libero...</p>
+          </div>
+          <div class="announcement">
+            <h4>Community Share Day</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores voluptatum ipsa cupiditate unde </p>
+          </div>
+          <div class="announcement">
+            <h4>Updated Privacy Policy</h4>
+            <p>Vel rem, ipsa officia commodi veniam excepturi, ex, molestias perspiciatis consequuntur sint error voluptatem </p>
+          </div>
+        </div>
         <div class="trending-header">
           <h2>Trending</h2>
         </div>
         <div class="trending">
+          <div class="user">
+            <div class="user-image"></div>
+            <h5 class="user-text">@tegan</h5>
+            <p class="user-text">World Peace Builder</p>
+          </div>
+          <div class="user">
+            <div class="user-image"></div>
+            <h5 class="user-text">@morgan</h5>
+            <p class="user-text">Super Cool Project</p>
+          </div>
+          <div class="user">
+            <div class="user-image"></div>
+            <h5 class="user-text">@kendall</h5>
+            <p class="user-text">Life Changing App</p>
+          </div>
+          <div class="user">
+            <div class="user-image"></div>
+            <h5 class="user-text">@alex</h5>
+            <p class="user-text">No Traffic Maker</p>
+          </div>
         </div>
       </div>
     </div>
