Change some grids to flex

--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
         </div>
         <div class="header-bottom-half">
           <div class="header-bottom-left">
-            <div class="replace-with-real-image"></div>
-            <div>
+            <div class="active-user-image"></div>
+            <div class="active-user-text">
               <p>Hi there,</p>
-            </div>
-            <div>
-              <p>John Doe</p>
+              <h2>John Doe</h2>
             </div>
           </div>
           <div class="header-bottom-right">
@@ -92,23 +90,31 @@
         <div class="trending">
           <div class="user">
             <div class="user-image"></div>
-            <h5 class="user-text">@tegan</h5>
-            <p class="user-text">World Peace Builder</p>
+            <div class="user-text">
+              <h5 class="user-text">@tegan</h5>
+              <p class="user-text">World Peace Builder</p>
+            </div>
           </div>
           <div class="user">
             <div class="user-image"></div>
-            <h5 class="user-text">@morgan</h5>
-            <p class="user-text">Super Cool Project</p>
+            <div class="user-text">
+              <h5 class="user-text">@morgan</h5>
+              <p class="user-text">Super Cool Project</p>
+            </div>
           </div>
           <div class="user">
             <div class="user-image"></div>
-            <h5 class="user-text">@kendall</h5>
-            <p class="user-text">Life Changing App</p>
+            <div class="user-text">
+              <h5 class="user-text">@kendall</h5>
+              <p class="user-text">Life Changing App</p>
+            </div>
           </div>
           <div class="user">
             <div class="user-image"></div>
-            <h5 class="user-text">@alex</h5>
-            <p class="user-text">No Traffic Maker</p>
+            <div class="user-text">
+              <h5 class="user-text">@alex</h5>
+              <p class="user-text">No Traffic Maker</p>
+            </div>
           </div>
         </div>
       </div>
