--- a/index.html
+++ b/index.html
@@ -56,18 +56,138 @@
       <h2>Your Projects</h2>
       <h2 class="announcements-header">Announcements</h2>
       <div class="projects">
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Testing this project name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="project-icons">
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+            <div class="project-test-image"></div>
+          </div>
+        </div>
       </div>
       <div class="right-info">
         <div class="announcements">
