Add proper icons

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="header">
         <div class="header-top-half">
           <div class="header-top-left">
-            <label for="search">~icon~</label>
+            <label for="search"><img src="./assets/search.svg" alt=""></label>
             <input type="text" id="search" name="search">
           </div>
           <div class="header-top-right">
-            <span>~icon~</span>
+            <span><img src="./assets/bell.svg" alt=""></span>
             <div class="replace-with-real-image">img</div>
             <span>John Doe</span>
           </div>
@@ -39,17 +39,17 @@
     <div class="sidebar">
       <h1>Dashboard</h1>
       <ul>
-        <li>Home</li>
-        <li>Profile</li>
-        <li>Messages</li>
-        <li>History</li>
-        <li>Tasks</li>
-        <li>Communities</li>
+        <li><a href="#"><span><img src="./assets/home.svg" alt=""></span> Home</a></li>
+        <li><a href="#"><span><img src="./assets/user.svg" alt=""></span>Profile</a></li>
+        <li><a href="#"><span><img src="./assets/message-circle.svg" alt=""></span>Messages</a></li>
+        <li><a href="#"><span><img src="./assets/clock.svg" alt=""></span>History</a></li>
+        <li><a href="#"><span><img src="./assets/check-circle.svg" alt=""></span>Tasks</a></li>
+        <li><a href="#"><span><img src="./assets/users.svg" alt=""></span>Communities</a></li>
       </ul>
       <ul>
-        <li>Settings</li>
-        <li>Support</li>
-        <li>Privacy</li>
+        <li><a href="#"><span><img src="./assets/settings.svg" alt=""></span>Settings</a></li>
+        <li><a href="#"><span><img src="./assets/help-circle.svg" alt=""></span>Support</a></li>
+        <li><a href="#"><span><img src="./assets/shield.svg" alt=""></span>Privacy</a></li>
       </ul>
     </div>
     <div class="main-content">
