Further improve styling

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
           </div>
           <div class="header-top-right">
             <span><img src="./assets/bell.svg" alt=""></span>
-            <div class="replace-with-real-image">img</div>
-            <span>John Doe</span>
+            <img class="cat-image" id="small-active-user-image" src="./assets/yuumi.jpg" alt="">
+            <span>Coding Cat</span>
           </div>
         </div>
         <div class="header-bottom-half">
           <div class="header-bottom-left">
-            <div class="active-user-image"></div>
+            <img class="cat-image" id="big-active-user-image" src="./assets/yuumi.jpg" alt="">
             <div class="active-user-text">
               <p>Hi there,</p>
-              <h2>John Doe</h2>
+              <h2>Coding Cat (@codecat)</h2>
             </div>
           </div>
           <div class="header-bottom-right">
@@ -37,8 +37,8 @@
         </div>
     </div>
     <div class="sidebar">
-      <h1>Dashboard</h1>
       <ul>
+        <li><a href="#"><span><img id="yarn" src="./assets/yarn.png" alt=""></span> <h1> Cat Devs</h1></a></li>
         <li><a href="#"><span><img src="./assets/home.svg" alt=""></span> Home</a></li>
         <li><a href="#"><span><img src="./assets/user.svg" alt=""></span>Profile</a></li>
         <li><a href="#"><span><img src="./assets/message-circle.svg" alt=""></span>Messages</a></li>
@@ -62,9 +62,42 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Super Cool Project</h2>
+            <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium!</p>
+          </div>
+          <div class="project-icons">
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Less Cool Project</h2>
+            <p>Risus commodo viverra maecenas accumsan lacus vel. Nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Nec sagittis aliquam malesuada bibendum arcu vitae elementum.</p>
+          </div>
+          <div class="project-icons">
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2>Impossible App</h2>
+            <p>Amet purus gravida quis blandit turpis cursus. Enim facilisis gravida neque convallis a cras semper. Dapibus ultrices in iaculis nunc sed augue.</p>
+          </div>
+          <div class="project-icons">
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -73,119 +106,86 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
           <div class="project-text">
-            <h2>Testing this project name</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h2>Easy Peasy App</h2>
+            <p>Turpis egestas integer eget aliquet nibh praesent tristique magna. Neque laoreet suspendisse interdum consectetur libero. Etiam erat velit scelerisque in dictum non consectetur a. Amet facilisis magna etiam tempor orci. Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a.</p>
           </div>
           <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
           <div class="project-text">
-            <h2>Testing this project name</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h2>Ad Blocker</h2>
+            <p>Turpis egestas integer eget aliquet nibh praesent tristique magna. Neque laoreet suspendisse interdum consectetur libero. Etiam erat velit scelerisque in dictum non consectetur a.</p>
           </div>
           <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
           <div class="project-text">
-            <h2>Testing this project name</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h2>Money Maker</h2>
+            <p>Ullamcorper morbi tincidunt ornare massa eget egestas purus. Dis parturient montes nascetur ridiculus. Euismod quis viverra nibh cras pulvinar mattis. Mattis rhoncus urna neque viverra justo nec. Morbi leo urna molestie at elementum eu. Tincidunt praesent semper feugiat nibh sed pulvinar.</p>
           </div>
           <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
           <div class="project-text">
-            <h2>Testing this project name</h2>
+            <h2>Fun Game</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
           <div class="project-text">
-            <h2>Testing this project name</h2>
+            <h2>Crypto App</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
           <div class="project-text">
-            <h2>Testing this project name</h2>
+            <h2>IOT Toaster</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
           <div class="project-text">
-            <h2>Testing this project name</h2>
+            <h2>CLI Chess</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-          </div>
-        </div>
-        <div class="project">
-          <div class="project-text">
-            <h2>Testing this project name</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-          <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-          </div>
-        </div>
-        <div class="project">
-          <div class="project-text">
-            <h2>Testing this project name</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-          <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-          </div>
-        </div>
-        <div class="project">
-          <div class="project-text">
-            <h2>Testing this project name</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-          <div class="project-icons">
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
-            <div class="project-test-image"></div>
+            <span><img src="./assets/star.svg" alt=""></span>
+            <span><img src="./assets/eye.svg" alt=""></span>
+            <span><img src="./assets/share-2.svg" alt=""></span>
           </div>
         </div>
       </div>
@@ -209,31 +209,31 @@
         </div>
         <div class="trending">
           <div class="user">
-            <div class="user-image"></div>
+            <img src="./assets/grumpy cat.jpg" class="user-image" alt="">
             <div class="user-text">
-              <h5 class="user-text">@tegan</h5>
-              <p class="user-text">World Peace Builder</p>
+              <h5 class="user-text">@grumpy-cat</h5>
+              <p class="user-text">Not Amused</p>
             </div>
           </div>
           <div class="user">
-            <div class="user-image"></div>
+            <img src="./assets/keyboard cat.jpg" class="user-image" alt="">
             <div class="user-text">
-              <h5 class="user-text">@morgan</h5>
-              <p class="user-text">Super Cool Project</p>
+              <h5 class="user-text">@keyboard-cat</h5>
+              <p class="user-text">A True Musician</p>
             </div>
           </div>
           <div class="user">
-            <div class="user-image"></div>
+            <img src="./assets/maru.jpg" class="user-image" alt="">
             <div class="user-text">
-              <h5 class="user-text">@kendall</h5>
-              <p class="user-text">Life Changing App</p>
+              <h5 class="user-text">@maru</h5>
+              <p class="user-text">Box Lover</p>
             </div>
           </div>
           <div class="user">
-            <div class="user-image"></div>
+            <img src="./assets/lil bub.jpg" class="user-image" alt="">
             <div class="user-text">
-              <h5 class="user-text">@alex</h5>
-              <p class="user-text">No Traffic Maker</p>
+              <h5 class="user-text">@lil-bub</h5>
+              <p class="user-text">Very Surprised</p>
             </div>
           </div>
         </div>
